Shang New Live/src/objects/Work_Order__c.object
<CustomObject>
    <fields>
        <fullName>Case_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estd_Comp_Date__c</fullName>
        <inlineHelpText>Estimated Completion Date</inlineHelpText>
        <label>Estd Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Completion_Date__c</fullName>
        <label>Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Cost__c</fullName>
        <inlineHelpText>Please key in expected cost</inlineHelpText>
        <label>Expected Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <description>Today - Start Date</description>
        <formula>IF ( ISBLANK (Start_Date__c ), 0 ,

TODAY() -  Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order_Date__c</fullName>
        <label>Work Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Order_Description__c</fullName>
        <label>Work Order Description</label>
        <type>TextArea</type>
    </fields>
    <label>Work Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Work Order No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>